--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "datalad" %}
-{% set version = "0.10.0rc5" %}
-{% set sha256 = "fb3a5426b7bf037f1962933cf29246ddbfcb0bc1cef66d8ea1336d33640eab21" %}
+{% set version = "0.10.0" %}
+{% set sha256 = "66018d5315e22fe800bad4a3b4aacfc0e68b63a0cd1e3d752e6719b0882cbac9" %}
 
 package:
   name: {{ name|lower }}
