--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -46,6 +46,7 @@ requirements:
     - python
     - requests >=1.2
     - requests-ftp
+    - secretstorage
     - scrapy >=1.1.0rc3
     - simplejson
     - six >=1.8.0
