--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,9 +11,11 @@ source:
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
   sha256: {{ sha256 }}
   patches:
+    - 0001-Use-backports.lzma-instead-of-pyliblzma-in-setup.py.patch
+    # Should be upstreamed in next release:
+    - 0001-ENH-TST-Skip-do-not-fail-testing-extractors-if-they-.patch
     - 0001-BF-Centralize-getting-information-about-console-widt.patch
     - 0002-ENH-support-backports.lzma-as-an-alternative-to-pyli.patch
-    - 0001-Use-backports.lzma-instead-of-pyliblzma-in-setup.py.patch
 
 build:
   number: 0
