--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -61,7 +61,7 @@ requirements:
     - psutil
     - requests >=1.2
     - requests-ftp
-    - secretstorage
+    - secretstorage  # [py>32]
     - simplejson
     - six >=1.8.0
     - tqdm
