--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -26,7 +26,8 @@ build:
     - git-annex-remote-datalad=datalad.customremotes.datalad:main
   script: python -m pip install --no-deps --ignore-installed .
   # Do not even attempt until we get git-annex in there
-  skip: True  # [not linux]
+  # Also skip py2 for now since lacks python-dbus needed for secretstorage 2.x needed by keyring
+  skip: True  # [not linux or py<32]
 
 requirements:
   build:
