--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -15,6 +15,7 @@ source:
     - 0001-ENH-TST-Skip-do-not-fail-testing-extractors-if-they-.patch
     - 0001-BF-Centralize-getting-information-about-console-widt.patch
     - 0002-ENH-support-backports.lzma-as-an-alternative-to-pyli.patch
+    - 0001-BF-auto-also-proxy-os.stat-call-which-is-now-used-by.patch 
     # Should stay here
     - 0001-Use-backports.lzma-instead-of-pyliblzma-in-setup.py.patch
 
