--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -46,6 +46,7 @@ requirements:
     - mock >=1.0.1
     - mutagen >=1.36
     - msgpack-python
+    - p7zip  # [not win]
     - patool >=1.7
     - pygithub
     - pyld <0.8|>=0.8.2
