One more patch to skip tests requiring network access

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,6 +12,7 @@ source:
   sha256: {{ sha256 }}
   patches:
   - 0001-BF-skip-running-testremote-with-recent-not-yet-fixed.patch
+  - 0001-BF-annotate-tests-in-test_utils_cached_dataset-with-.patch
 
 build:
   number: 0
