--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,6 +14,7 @@ source:
   - 0001-BF-skip-running-testremote-with-recent-not-yet-fixed.patch
   - 0001-BF-annotate-tests-in-test_utils_cached_dataset-with-.patch
   - 0002-BF-TST-skip-one-case-of-test_ria_basics.test_binary_.patch
+  - 0001-ENH-TST-use-assert_equal-to-see-why-conda-python-3.8.patch
 
 build:
   number: 0
