Adding 'git' into run dependencies since we call to git
Well -- we might have been taking advantage of mixing in with
system wide git, but to be totally kosher we should bring in
git as well.

That should address at least some problems with testing nodep
build of git annex in conda, see https://github.com/conda-forge/git-annex-feedstock/pull/98

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,7 +12,7 @@ source:
   sha256: {{ sha256 }}
 
 build:
-  number: 0
+  number: 1
   entry_points:
     - datalad=datalad.cmdline.main:main
     - git-annex-remote-datalad-archives=datalad.customremotes.archives:main
@@ -38,6 +38,7 @@ requirements:
     - distro  # [py>=38]
     - exifread
     - fasteners
+    - git
     - git-annex  # [linux]
     - gitpython >=2.1.12
     - humanize
