BF: having conda git on windows interfers with system wide git/git-annex installation
this is a "temporary workaround".  We need to figure it out on datalad end and
eventually add git-annex build to make it all 100% kosher

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,7 +12,7 @@ source:
   sha256: {{ sha256 }}
 
 build:
-  number: 1
+  number: 2
   entry_points:
     - datalad=datalad.cmdline.main:main
     - git-annex-remote-datalad-archives=datalad.customremotes.archives:main
@@ -38,7 +38,7 @@ requirements:
     - distro  # [py>=38]
     - exifread
     - fasteners
-    - git
+    - git  # [not win]
     - git-annex  # [linux]
     - humanize
     - iso8601
