Now there is 7zip for windows so we can use it!
https://github.com/conda-forge/7zip-feedstock

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -48,6 +48,7 @@ requirements:
     - mock >=1.0.1
     - mutagen >=1.36
     - msgpack-python
+    - 7zip  # [win]
     - p7zip  # [not win]
     - patool >=1.7
     - pygithub
