Add importlib-metadata [py<38] into run since listed "upstream"
although I believe it is needed only at setup time, to stay consistent
with upstream and also trigger a rebuild

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -41,6 +41,7 @@ requirements:
     - git  # [not win]
     - git-annex  # [linux]
     - humanize
+    - importlib-metadata  # [py<38]
     - iso8601
     - jsmin
     - keyring >=8.0
