--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -76,7 +76,8 @@ test:
     - httpretty >=0.8.14
     - mock
     - nibabel
-    - nose >=1.3.4
+    - pytest
+    - pytest-fail-slow
     - packaging
     - vcrpy
 
