Revert "BF: remove noarch: python to resolve conda using python2.7 while installing"
This reverts commit 170c8520b69fb5ae1ac86039f2383cef61235270.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,6 +13,7 @@ source:
 
 build:
   number: 0
+  noarch: python
   entry_points:
     - datalad=datalad.cmdline.main:main
     - git-annex-remote-datalad-archives=datalad.customremotes.archives:main
